[gd_scene load_steps=35 format=3 uid="uid://badt4m8tpqm8c"]

[ext_resource type="Script" path="res://scripts/enemy/Skeleton1.gd" id="1_u33hg"]
[ext_resource type="Texture2D" uid="uid://y57kqvaqexvb" path="res://assets/textures/sprites/enemy/sprite_enemy_skeleton.png" id="2_qnq8l"]
[ext_resource type="AudioStream" uid="uid://yionpprln20o" path="res://assets/audio/sfx/enemy/sfx_enemy_meteor_attack.ogg" id="3_mtaw7"]
[ext_resource type="FontFile" uid="uid://dfocytrdeht66" path="res://assets/fonts/OptimusPrinceps.ttf" id="3_qdnn1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qljgf"]
atlas = ExtResource("2_qnq8l")
region = Rect2(60, 36, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_v428s"]
atlas = ExtResource("2_qnq8l")
region = Rect2(48, 36, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_lapq5"]
atlas = ExtResource("2_qnq8l")
region = Rect2(60, 36, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ly5p"]
atlas = ExtResource("2_qnq8l")
region = Rect2(0, 48, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ppqx"]
atlas = ExtResource("2_qnq8l")
region = Rect2(12, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_crx3g"]
atlas = ExtResource("2_qnq8l")
region = Rect2(24, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgtln"]
atlas = ExtResource("2_qnq8l")
region = Rect2(36, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejheg"]
atlas = ExtResource("2_qnq8l")
region = Rect2(0, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c853"]
atlas = ExtResource("2_qnq8l")
region = Rect2(0, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_c548s"]
atlas = ExtResource("2_qnq8l")
region = Rect2(12, 36, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhwvv"]
atlas = ExtResource("2_qnq8l")
region = Rect2(24, 36, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_uren0"]
atlas = ExtResource("2_qnq8l")
region = Rect2(36, 36, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqgcc"]
atlas = ExtResource("2_qnq8l")
region = Rect2(0, 36, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6bq4"]
atlas = ExtResource("2_qnq8l")
region = Rect2(36, 24, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lf6f"]
atlas = ExtResource("2_qnq8l")
region = Rect2(48, 24, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwhjb"]
atlas = ExtResource("2_qnq8l")
region = Rect2(60, 24, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_17eqo"]
atlas = ExtResource("2_qnq8l")
region = Rect2(24, 24, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_dq4od"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qljgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v428s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lapq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ly5p")
}],
"loop": true,
"name": &"back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ppqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crx3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgtln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejheg")
}],
"loop": true,
"name": &"front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c853")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c548s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhwvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uren0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqgcc")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6bq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lf6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwhjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17eqo")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_huppu"]
size = Vector2(12, 18)

[sub_resource type="CircleShape2D" id="CircleShape2D_i68gl"]
radius = 92.0054

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ayqtx"]
size = Vector2(14, 20)

[sub_resource type="Gradient" id="Gradient_wacli"]
offsets = PackedFloat32Array(0, 0.993976)
colors = PackedColorArray(0.913725, 0, 0, 1, 0.913725, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_brfyo"]
gradient = SubResource("Gradient_wacli")

[sub_resource type="Animation" id="Animation_yfjl2"]
loop_mode = 1
step = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("meteor1:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.203125, -0.25, 0, 0.25, 0, 0.15, -0.25, 0, 0.25, 0, 0.2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("meteor1:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.296875, -0.25, 0, 0.25, 0, 0.219, -0.25, 0, 0.25, 0, 0.292, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="Animation" id="Animation_01eia"]
resource_name = "meteor1_fast_pulse"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("meteor1:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.75, -0.25, 0, 0.25, 0, 0.700373, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.25, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("meteor1:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.655, -0.25, 0, 0.25, 0, 0.610674, -0.25, 0, 0.25, 0, 0.655, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.25, 0.5)
}

[sub_resource type="Animation" id="Animation_xwflr"]
resource_name = "meteor1_pulse"
loop_mode = 1
step = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("meteor1:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.4, -0.25, 0, 0.25, 0, 0.3, -0.25, 0, 0.25, 0, 0.4, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("meteor1:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.346, -0.25, 0, 0.25, 0, 0.26, -0.25, 0, 0.25, 0, 0.347, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="Animation" id="Animation_5i7f1"]
resource_name = "meteor2_pulse"
loop_mode = 1

[sub_resource type="Animation" id="Animation_vh11t"]
resource_name = "meteor3_pulse"
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ps2p4"]
_data = {
"RESET": SubResource("Animation_yfjl2"),
"meteor1_fast_pulse": SubResource("Animation_01eia"),
"meteor1_pulse": SubResource("Animation_xwflr"),
"meteor2_pulse": SubResource("Animation_5i7f1"),
"meteor3_pulse": SubResource("Animation_vh11t")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fvpit"]
radius = 10.875
height = 26.0

[node name="Skeleton" type="CharacterBody2D" groups=["Enemy"]]
position = Vector2(-114, 13)
script = ExtResource("1_u33hg")

[node name="SkeletonSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -2)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_dq4od")
animation = &"idle"
autoplay = "idle"

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_huppu")

[node name="AgroRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgroRange"]
shape = SubResource("CircleShape2D_i68gl")

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackHitbox" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ayqtx")

[node name="DamageColourTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="HitStunTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="ImmunityFrames" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="meteor1" type="Sprite2D" parent="."]
position = Vector2(3.8147e-06, 1)
scale = Vector2(0.203125, 0.296875)
texture = SubResource("GradientTexture2D_brfyo")

[node name="meteor1label" type="Label" parent="meteor1"]
offset_left = -33.3333
offset_top = -13.8462
offset_right = 17.6667
offset_bottom = 9.15384
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qdnn1")
text = "BOOM
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AnimationTree" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ps2p4")
}

[node name="Meteor1TrackerTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Meteor1TelegraphTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Meteor1AttackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." groups=["Audio"]]
stream = ExtResource("3_mtaw7")
volume_db = 24.0

[node name="Meteor1Area" type="Area2D" parent="."]

[node name="Meteor1Hitbox" type="CollisionShape2D" parent="Meteor1Area"]
position = Vector2(7.62939e-06, 1.125)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fvpit")

[connection signal="body_entered" from="AgroRange" to="." method="_on_agro_range_body_entered"]
[connection signal="body_exited" from="AgroRange" to="." method="_on_agro_range_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="DamageColourTimer" to="." method="_on_damage_colour_timer_timeout"]
[connection signal="timeout" from="HitStunTimer" to="." method="_on_hit_stun_timer_timeout"]
[connection signal="timeout" from="ImmunityFrames" to="." method="_on_immunity_frames_timeout"]
[connection signal="timeout" from="Meteor1TrackerTimer" to="." method="_on_meteor_1_tracker_timer_timeout"]
[connection signal="timeout" from="Meteor1TelegraphTimer" to="." method="_on_meteor_1_telegraph_timer_timeout"]
[connection signal="timeout" from="Meteor1AttackTimer" to="." method="_on_meteor_1_attack_timer_timeout"]
